# ich_lerne_deutsch

./: .gitignore  LICENSE  README.md  pyproject.toml
csv_word_lists/: A1_nouns.csv  A1_nouns_II.csv  Other_words.csv  Other_words_II.csv  common_verbs.csv  common_verbs_II.csv  test_verbs.csv
data/: 2000_plus_common_nouns.csv  Goethe_A1_Wordlist  Goethe_A1_Wordlist.csv  common_nouns.p  nouns.p
ich_lerne_deutsch/: drills.py  word_classes.py
misc/: assemble_common_nouns.py  assemble_dictionary.py  find_noun_definitions.py  parse_goethe_word_list.py  scrape_web.py  test_flashcard.py
scripts/: launch_app.py  make_word_batches.py
src/ich_lerne_deutsch/: drills.py  helpers.py  word_classes.py
src/ich_lerne_deutsch.egg-info/: PKG-INFO
