[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ich_lerne_deutsch"
version = "0.2"
authors = [
  { name="Harold Matthews", email="harrymatthews50@gmail.com" },
]
description = "A simple package for building German vocabulary"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'pandas',
  'regex',
  'tk'
]

[tool.setuptools]
package-dir = {"" = "src"}
[project.urls]
"Homepage" = "https://github.com/harrymatthews50/ich_lerne_deutsch"


